<resources>
    <string name="app_name">汽车之家</string>
    <string name="autohome_webview_loading">正在加载中....</string>
    <string name="autohome_webview_error">加载错误,请重试</string>
    <string name="autohome_intercept_title">汽车之家提醒您</string>
    <string name="autohome_intercept_info">页面出现异常，请更换网络</string>
    <string name="autohome_intercept_button_txt">知道了</string>
    <string name="action_settings">设置</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="share_by_weixin">微信分享</string>
    <string name="share_by_qq">QQ分享</string>
    <string name="share_by_yixin">易信分享</string>
    <string name="shake_share">注册摇一摇截图->分享</string>
    <string name="shake_openshare">注册摇一摇打开分享面板</string>
    <string name="shake_scrshot">注册摇一摇截图</string>
    <string name="take_scrshot">直接截图</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
    <string name="video_start_time">00:00</string>
    <string name="goto_video">摇一摇视频截图Activity</string>
    <string name="goto_game">游戏Activity</string>
    <string name="goto_common">普通Activity</string>
    <string name="video">VideoActivity</string>
    <string name="game">GameActivity</string>
    <string name="common">CommonActivity</string>
    <string name="back">返回</string>
    <string name="goto_facebook">添加Facebook分享</string>
    <string name="fb_login">Facebook登录</string>
    <string name="fb_logout">Facebook注销</string>
    <string name="fb_share">Facebook分享</string>
    <string name="laiwang_share">来往分享</string>
    <string name="instagram_share">Instagram分享</string>
    <string name="fb_app_id">567261760019884</string>
    <string name="photo_post">Photo Post</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">"Successfully posted '%1$s'.
Post ID: %2$s"</string>
    <string name="error">Error</string>
    <string name="status_update">Updating Facebook status at</string>
    <string name="ok">OK</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_laiwang_key">来往</string>
    <string name="umeng_socialize_text_laiwang_dynamic_key">来往动态</string>
    <string name="umeng_socialize_laiwang_default_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des" />
    <string name="umeng_socialize_share">分享</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="com.crashlytics.android.build_id">fa980a47-6a32-4640-9228-d8d435af11a8</string>
    <string name="comfirm">确定</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="sort">排序</string>
    <string name="close">关闭</string>
    <string name="all">全部</string>
    <string name="search">搜索</string>
    <string name="caption">品牌</string>
    <string name="countrywide">全国</string>
    <string name="tab_main_article">推荐</string>
    <string name="tab_main_club">论坛</string>
    <string name="tab_main_car">找车</string>
    <string name="tab_main_sale">降价</string>
    <string name="tab_main_discovery">发现</string>
    <string name="tab_main_me">我</string>
    <string name="tabsub_main_return">返回</string>
    <string name="owner_guest_loginbtn">立即登录</string>
    <string name="owner_login_username">手机号/邮箱/用户名</string>
    <string name="owner_login_password">密码</string>
    <string name="owner_login_btn">登录</string>
    <string name="owner_login_sina">新浪微博登录</string>
    <string name="owner_login_qq">QQ登录</string>
    <string name="owner_icon_review">评论回复</string>
    <string name="owner_icon_forum">论坛回复</string>
    <string name="owner_icon_message">私信</string>
    <string name="owner_userinfo_pic">头像</string>
    <string name="owner_userinfo_name">名称</string>
    <string name="owner_userinfo_gender">性别</string>
    <string name="owner_userinfo_from">来自</string>
    <string name="owner_userinfo_regtime">注册时间</string>
    <string name="owner_userinfo_auth">认证</string>
    <string name="owner_userinfo_points">积分</string>
    <string name="owner_userinfo_weiwang">威望</string>
    <string name="owner_userinfo_jiayouquan">家油券</string>
    <string name="owner_userinfo_medal">勋章</string>
    <string name="owner_userinfo_exit">退出当前帐号</string>
    <string name="owner_account_weibo">新浪微博</string>
    <string name="owner_account_qq">QQ</string>
    <string name="owner_account_bind">绑定</string>
    <string name="owner_account_bound">已绑定</string>
    <string name="owner_setup_bind">帐号绑定</string>
    <string name="owner_setup_push">推送设置</string>
    <string name="owner_setup_push_status">推送状态</string>
    <string name="owner_setup_push_sysmsg">系统消息</string>
    <string name="owner_setup_push_personmsg">个人消息</string>
    <string name="owner_setup_push_on">已开启</string>
    <string name="owner_setup_push_off">已关闭</string>
    <string name="owner_setup_push_time">推送时间</string>
    <string name="owner_setup_push_pushtime">推动接收时间</string>
    <string name="owner_setup_picmode">小图模式</string>
    <string name="owner_setup_nightmode">夜间模式</string>
    <string name="owner_setup_gesture">手势设置</string>
    <string name="owner_setup_clearcache">清除缓存</string>
    <string name="owner_setup_suggestion">意见反馈</string>
    <string name="owner_setup_checkversion">检测更新</string>
    <string name="owner_setup_grade">给汽车之家评分</string>
    <string name="owner_setup_checkversion_hint">当前已经是最新版本啦！</string>
    <string name="owner_setup_about">关于汽车之家</string>
    <string name="owner_setup_about_version">版本</string>
    <string name="owner_setup_about_copyright">汽车之家 版权所有</string>
    <string name="owner_setup_about_introduction">功能介绍</string>
    <string name="owner_setup_about_question">常见问题</string>
    <string name="loading_video">Loading video</string>
    <string name="owner_common_fuction">常用功能</string>
    <string name="owner_app_recommendation">应用推荐</string>
    <string name="unlimited">不限</string>
    <string name="drop_down_list_header_default_text">点击可以刷新</string>
    <string name="drop_down_list_header_pull_text">下拉可以刷新</string>
    <string name="drop_down_list_header_release_text">松开可以刷新</string>
    <string name="drop_down_list_header_loading_text">加载中…</string>
    <string name="drop_down_list_footer_default_text">更多</string>
    <string name="drop_down_list_footer_loading_text">加载中…</string>
    <string name="drop_down_list_footer_no_more_text">没有更多了</string>
    <string name="image_content">Image</string>
    <string name="empty_listview_text">暂无内容</string>
    <string name="article_settting_more">更多</string>
    <string name="article_settting_pageCount">页码</string>
    <string name="screen_helper">收藏、分享等，全在这儿</string>
    <string name="search_edit_hittext_composite">搜索关键词</string>
    <string name="search_edit_hittext_article">搜索文章标题</string>
    <string name="search_edit_hittext_video">搜索视频标题</string>
    <string name="search_edit_hittext_club">搜索论坛或帖子标题</string>
    <string name="search_edit_hittext_series">搜索车系</string>
    <string name="search_edit_hittext_insideclub">搜索帖子标题</string>
    <string name="search_history_text">搜索历史</string>
    <string name="search_result_response">没有找到和“%1$s”相符的%2$s</string>
    <string name="search_result_response_video">视频</string>
    <string name="search_result_response_article">文章</string>
    <string name="search_result_response_series">车系</string>
    <string name="search_result_response_content">内容</string>
    <string name="search_empty_forbiddent">搜索内容不能为空</string>
    <string name="club_photo_option_item">拍照</string>
    <string name="club_video_option_item">拍视频</string>
</resources>