<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_values" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x" />
        <EditText android:enabled="false" android:id="@id/xValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="number" />
        <TextView android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/y" />
        <EditText android:enabled="false" android:id="@id/yValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="number" />
        <Button android:enabled="false" android:id="@id/add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/chart" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/new_series" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_series" />
    </LinearLayout>
</LinearLayout>