<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#be000000" android:paddingTop="30.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/guide_view_main_radio" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_alignParentBottom="true">
        <RadioButton android:textSize="10.0dip" android:textColor="@color/dir_primarybar_txt" android:gravity="center" android:id="@id/guide_view_main_article" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/tab_main_article" android:drawableTop="@drawable/nav_icon_article" android:layout_weight="1.0" />
        <RadioButton android:textSize="10.0dip" android:textColor="@color/dir_primarybar_txt" android:gravity="center" android:id="@id/guide_view_main_club" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/tab_main_club" android:drawableTop="@drawable/nav_icon_forum" android:layout_weight="1.0" />
        <RadioButton android:textSize="10.0dip" android:textColor="@color/textcolor09" android:gravity="center" android:id="@id/guide_view_main_car" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/tab_main_car" android:drawableTop="@drawable/guide_view_find_car_icon" android:layout_weight="1.0" />
        <RadioButton android:textSize="10.0dip" android:textColor="@color/textcolor09" android:gravity="center" android:id="@id/guide_view_main_discovery" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/tab_main_discovery" android:drawableTop="@drawable/guide_view_discovery_icon" android:layout_weight="1.0" />
        <RadioButton android:textSize="10.0dip" android:textColor="@color/dir_primarybar_txt" android:gravity="center" android:id="@id/guide_view_main_me" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/tab_main_me" android:drawableTop="@drawable/nav_icon_my" android:layout_weight="1.0" />
    </RadioGroup>
    <ImageView android:id="@id/guide_view_main_image" android:background="@drawable/guide_view_find_car" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:contentDescription="@null" />
</RelativeLayout>