<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/bgcolor31" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:overScrollMode="never"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/owner_setup_line1" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginBottom="20.0dip" />
        <TextView android:id="@id/owner_setup_line2" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/font05" android:textColor="@color/textcolor06" android:gravity="center_vertical" android:id="@id/owner_setup_bind" android:background="@drawable/owner_setup_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/owner_setup_bind" android:drawableRight="@drawable/arrow_right" />
        <TextView android:id="@id/owner_setup_line3" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginBottom="20.0dip" />
        <TextView android:id="@id/owner_setup_line4" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/font05" android:textColor="@color/textcolor04" android:gravity="center_vertical" android:id="@id/owner_setup_push" android:background="@drawable/owner_setup_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/owner_setup_push" android:drawableRight="@drawable/arrow_right" />
        <TextView android:id="@id/owner_setup_line5" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <RelativeLayout android:id="@id/owner_setup_picture" android:background="@drawable/owner_setup_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:clickable="false" android:layout_width="fill_parent" android:layout_height="45.0dip">
            <TextView android:textSize="@dimen/font05" android:textColor="@color/textcolor04" android:gravity="center_vertical" android:id="@id/owner_setup_picture_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/owner_setup_picmode" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <com.cubic.autohome.common.view.AHSlipButton android:id="@id/owner_setup_picture_slipbtn" android:layout_width="68.0dip" android:layout_height="28.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:id="@id/owner_setup_line6" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <RelativeLayout android:id="@id/owner_setup_skin" android:background="@drawable/owner_setup_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:clickable="false" android:layout_width="fill_parent" android:layout_height="45.0dip">
            <TextView android:textSize="@dimen/font05" android:textColor="@color/textcolor06" android:gravity="center_vertical" android:id="@id/owner_setup_skin_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/owner_setup_nightmode" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <com.cubic.autohome.common.view.AHSlipButton android:id="@id/owner_setup_skin_slipbtn" android:layout_width="68.0dip" android:layout_height="28.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:id="@id/owner_setup_line7" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <RelativeLayout android:id="@id/owner_setup_clearcache" android:background="@drawable/owner_setup_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip">
            <TextView android:textSize="@dimen/font05" android:textColor="@color/textcolor06" android:gravity="center_vertical" android:id="@id/owner_setup_clearcache_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/owner_setup_clearcache" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textSize="@dimen/font05" android:textColor="@color/textcolor01" android:gravity="center_vertical" android:id="@id/owner_setup_cache_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:id="@id/owner_setup_line8" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginBottom="20.0dip" />
        <TextView android:id="@id/owner_setup_line9" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/font05" android:textColor="@color/textcolor06" android:gravity="center_vertical" android:id="@id/owner_setup_suggestion" android:background="@drawable/owner_setup_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/owner_setup_suggestion" android:drawableRight="@drawable/arrow_right" />
        <TextView android:id="@id/owner_setup_line10" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/font05" android:textColor="@color/textcolor06" android:gravity="center_vertical" android:id="@id/owner_setup_grade" android:background="@drawable/owner_setup_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/owner_setup_grade" android:drawableRight="@drawable/arrow_right" />
        <TextView android:id="@id/owner_setup_line11" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/font05" android:textColor="@color/textcolor06" android:gravity="center_vertical" android:id="@id/owner_setup_checkversion" android:background="@drawable/owner_setup_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/owner_setup_checkversion" android:drawableRight="@drawable/arrow_right" />
        <TextView android:id="@id/owner_setup_line12" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="16.0dip" android:textColor="@color/textcolor04" android:gravity="center_vertical" android:id="@id/owner_setup_about" android:background="@drawable/owner_setup_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/owner_setup_about" android:drawableRight="@drawable/arrow_right" />
        <TextView android:id="@id/owner_setup_line13" android:background="@color/bgcolor33" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
</ScrollView>